Added images, descriptions, and links, to the projects in the project section

--- a/index.html
+++ b/index.html
@@ -97,35 +97,35 @@
                 <h2>Projects <span>|</span></h2>
                 <div class="project-cards">
                     <div class="project-card">
-                        <img src="images/blank.jpg" alt="Blank">
+                        <img src="images/AutoTranslateApp.png" alt="Blank">
                         <div class="card-info">
-                            <h1>Project 1</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                            <a href="#">View Here</a>
+                            <h1>Translation Chat</h1>
+                            <p>A chat app with an auto translate feature using Google's translation API. Devloped with the Clean Architecture process</p>
+                            <a href="https://github.com/CSC207-2022F-UofT/course-project-translate-chat-program" target="_blank">View Here</a>
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="images/blank.jpg" alt="Blank">
+                        <img src="images/PortfolioWebsite.png" alt="Blank">
                         <div class="card-info">
-                            <h1>Project 2</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                            <a href="#">View Here</a>
+                            <h1>Portflio Website</h1>
+                            <p>A uniquely designed personal portflio website displaying personal info along with skills and projects</p>
+                            <a href="https://github.com/terenceliu88/PorfolioWebsite" target="_blank">View Here</a>
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="images/blank.jpg" alt="Blank">
+                        <img src="images/HousingMarket.png" alt="Blank">
                         <div class="card-info">
-                            <h1>Project 3</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                            <a href="#">View Here</a>
+                            <h1>Housing Market</h1>
+                            <p>A program that calculates the average housing prices from before and after COVID and illustrates it with a graph</p>
+                            <a href="https://github.com/terenceliu88/HousingMarket" target="_blank">View Here</a>
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="images/blank.jpg" alt="Blank">
+                        <img src="images/Pong.png" alt="Blank">
                         <div class="card-info">
-                            <h1>Project 4</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                            <a href="#">View Here</a>
+                            <h1>Pong</h1>
+                            <p>An interactive 2 player replica pong game which was heavily inspired by the original arcade pong game</p>
+                            <a href="https://github.com/terenceliu88/PongGame" target="_blank">View Here</a>
                         </div>
                     </div>
                 </div>
